--- a/CSS atividades/Catalogo de filmes/style.css
+++ b/CSS atividades/Catalogo de filmes/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --cor-fundo: #1f2735;
+  --cor-fundo: #232c3b;
   --cor-card: #101826;
   --cor-texto: #e6eef6;
   --cor-acento: rgb(255, 110, 95);
